fix overflow

--- a/src/scss/_null.scss
+++ b/src/scss/_null.scss
@@ -30,6 +30,7 @@ html,
 body {
 	height: 100%;
 	min-width: $minWidth;
+	overflow-x: hidden;
 }
 body {
 	line-height: 1;
